[build-system]
requires = ["hatchling", "requests-oauthlib"]
build-backend = "hatchling.build"

[project]
name = "printful"
version = "0.0.1"
authors = [
  { name="Kevin Sallee", email="kevin.sallee@gmail.com" },
]
description = "Python Bindings for Printful API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ksallee/printful"
"Bug Tracker" = "https://github.com/ksallee/printful/issues"